@@ -92,8 +92,8 @@ public class MetsKitodoWriterTest {
         MetsKitodoWrapper savedMetsKitodoWrapper = new MetsKitodoWrapper(xmlTestFile, xsltFile);
         Files.deleteIfExists(Paths.get(xmlTestFile));
 
-        String loadedMetadata = metsKitodoWrapper.getDmdSecs().get(0).getKitodoType().getMetadata().get(0).getValue();
-        String savedMetadata = metsKitodoWrapper.getDmdSecs().get(0).getKitodoType().getMetadata().get(0)
+        String loadedMetadata = metsKitodoWrapper.getDmdSecs().getFirst().getKitodoType().getMetadata().getFirst().getValue();
+        String savedMetadata = metsKitodoWrapper.getDmdSecs().getFirst().getKitodoType().getMetadata().getFirst()
                 .getValue();
 
         assertEquals(loadedMetadata,
@@ -125,8 +125,8 @@ public class MetsKitodoWriterTest {
         MetsKitodoWrapper savedMetsKitodoWrapper = new MetsKitodoWrapper(xmlTestFile, xsltFile);
         Files.deleteIfExists(Paths.get(xmlTestFile));
 
-        String loadedMetadata = metsKitodoWrapper.getDmdSecs().get(0).getKitodoType().getMetadata().get(0).getValue();
-        String savedMetadata = savedMetsKitodoWrapper.getDmdSecs().get(0).getKitodoType().getMetadata().get(0).getValue();
+        String loadedMetadata = metsKitodoWrapper.getDmdSecs().getFirst().getKitodoType().getMetadata().getFirst().getValue();
+        String savedMetadata = savedMetsKitodoWrapper.getDmdSecs().getFirst().getKitodoType().getMetadata().getFirst().getValue();
 
         assertEquals(loadedMetadata,
             savedMetadata,
@@ -136,7 +136,7 @@ public class MetsKitodoWriterTest {
             "The number of dmdSec elements of the loaded and the saved mets file are not equal");
 
         assertEquals(2,
-            metsKitodoWrapper.getMets().getMetsHdr().getAgent().get(0).getNote().size(),
+            metsKitodoWrapper.getMets().getMetsHdr().getAgent().getFirst().getNote().size(),
             "Conversion note was not inserted to mets header");
     }
 
